# noon

./: .env.example  .gitignore  README.md  langgraph.json
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
agent/: README.md  __init__.py  backend_client.py  calendar_client.py  langgraph.json  main.py  mock_client.py  mocks.py  prompts.py  pyproject.toml  test_agent.py  time_reference.py  timing_logger.py  tools.py  validation.py
agent/schemas/: __init__.py  agent_response.py
backend/: .env.example  ARCHITECTURE_ASYNC_AGENTS.md  README.md  config.py  dependencies.py  main.py  pyproject.toml  test_agent_call.py
backend/agent/routes/: agent.py
backend/api/v1/: agent.py  agent_calendar.py  auth.py  calendars.py  router.py
backend/auth/routes/: auth.py
backend/auth/schemas/: __init__.py  auth.py
backend/auth/utils/: supabase_client.py
backend/core/: config.py  dependencies.py  logging.py  middleware.py  security.py  timing_logger.py
backend/db/: models.py  session.py
backend/domains/auth/: repository.py  service.py
backend/domains/calendars/: repository.py  schemas.py  service.py
backend/domains/calendars/providers/: base.py  google.py
backend/domains/transcription/: service.py
backend/google_calendar/routes/: google_accounts.py  google_calendar.py
backend/google_calendar/schemas/: __init__.py  google_accounts.py  google_calendar.py
backend/google_calendar/utils/: calendar_wrapper.py  google_oauth.py
backend/google_calendar/utils/calendar_client/: auth.py  gcal_wrapper.py  service.py
backend/google_calendar/utils/google_calendar/: __init__.py  client.py  service.py
backend/middleware/: request_logging.py
backend/models/: __init__.py  agent_response.py
backend/notebooks/: 01_agent_endpoint_test.ipynb
backend/schemas/: __init__.py  agent_response.py  confirm_action.py  user.py
backend/services/: __init__.py  agent_calendar_service.py  async_agent.py
backend/tests/: conftest.py  test_agent.py
backend/types/: user.py
backend/utils/: errors.py
backend/v2nl/: __init__.py  main.py  requirements.txt
backend/v2nl/tests/: test_transcription.py
ios/: README.md
ios/Noon/: AgentView.swift  AppConfiguration.swift  CalendarOAuthCoordinator.swift  CalendarsView.swift  ColorPalette.swift  ContentView.swift  NoonApp.swift  WARNINGS_SUPPRESSION.md
ios/Noon.xcodeproj/: project.pbxproj
ios/Noon/App/: ContentView.swift  NoonApp.swift
ios/Noon/Audio/: AgentAudioRecorder.swift
ios/Noon/Models/: AgentRequest.swift  AgentResponse.swift  CalendarEvent.swift  DisplayEvent.swift
ios/Noon/Networking/: AgentActionService.swift  AuthService.swift  CalendarService.swift  GoogleCalendarScheduleService.swift  TranscriptionService.swift
noon-agent/: .env.example  CALENDAR_AGENT_README.md  IMPLEMENTATION_SUMMARY.md  Makefile  OAUTH_SETUP.md  README.md  TESTING.md  example_usage.py  generate_token.py  langgraph.json  main.py  pyproject.toml  requirements.txt  test_calendar_operations.py
noon-agent-old/: DATABASE_SETUP.md  README.md  generate_token.py  pyproject.toml  test_calendar_operations.py
noon-agent-old/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
noon-agent-old/noon_agent/: __init__.py  _backend_loader.py  calendar_graph.py  calendar_nodes.py  calendar_router.py  calendar_service.py  config.py  database.py  db_context.py  helpers.py  main.py  mocks.py  models.py  schemas.py
noon-agent/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
noon-agent/clio/: config.py  helpers.py  main.py  utils.py
noon-agent/migrations/: 001_initial_schema.sql
noon-agent/noon_agent/: __init__.py  calendar_service.py  calendar_state.py  config.py  constants.py  db_context.py  gcal_auth.py  gcal_wrapper.py  helpers.py  main.py  schemas.py  utils.py
noon-agent/noon_agent/tools/: context_tools.py
noon-agent/tests/: test_endpoint.py
noon-agent/tests/integration_tests/: __init__.py  test_tool_calls.py
noon-agent/tests/unit_tests/: test_calendar_service.py  test_graph.py  test_intent_parser.py
noon-backend/: .env.example  AGENT_API_ENDPOINTS.md  AGENT_API_RESPONSE_TYPES.md  ARCHITECTURE_AGENT_OBSERVABILITY.md  README.md  README_AGENT_OBSERVABILITY.md  TESTING_CURL_REQUESTS.md  Untitled.ipynb  app.py  config.py  dependencies.py  main.py  pyproject.toml  test_auth.py
noon-backend/middleware/: request_logging.py
noon-backend/models/: __init__.py  agent_observability.py  calendar_preferences.py  request_logs.py  user_insights.py
noon-backend/noon_backend/: app.py
noon-backend/noon_backend/services/: supabase_client.py
noon-backend/routers/: __init__.py  agent.py  auth.py  google_accounts.py  google_calendar.py  user_insights.py
noon-backend/schemas/: agent.py  auth.py  google_accounts.py
noon-backend/services/: __init__.py  agent_observability.py  async_agent.py  calendar_agent.py  calendar_event_emitter.py  google_oauth.py  supabase_client.py  user_insights.py
noon-backend/services/calendar_client/: __init__.py  auth.py  gcal_wrapper.py  service.py
noon-backend/tests/: test_calendar_agent_service.py
noon-backend/workers/: __init__.py  async_job_processor.py  preference_emitter_worker.py
noon-ios/Noon/: AgentView.swift  AppConfiguration.swift  CalendarsView.swift  ColorPalette.swift  ContentView.swift
noon-ios/Noon.xcodeproj/: project.pbxproj
noon-v2nl/: README.md  main.py
noon-v2nl/tests/: test_transcription.py
supabase/: config.toml
supabase/migrations/: 0001_seed_schema.sql  0001_users_google_accounts.sql  0002_add_timezone_to_users.sql  0002_calendar_agent_schema.sql  0002_calendars.sql  0003_link_calendars_to_google_accounts.sql  0004_add_access_role_to_calendars.sql  0004_user_insights.sql  0005_add_is_hidden_to_calendars.sql  0005_calendar_preferences.sql  0006_agent_observability.sql
(+64 files in other folders)
