[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.5",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.2",
    "langgraph-cli[inmem]>=0.4.7",
    "langsmith>=0.4.42",
]

[tool.setuptools]
py-modules = ["main", "prompts", "__init__"]
