[project]
name = "noon-backend"
version = "0.1.0"
description = "Backend API for Noon - handles Supabase auth and LangGraph agent"
authors = [{ name = "Noon" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "supabase>=2.5.0,<3.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "pyjwt>=2.8.0,<3.0.0",
    "httpx>=0.27.2",
    "langgraph-sdk>=0.2.9",
    "langgraph>=0.2.53",
    "langchain-core>=0.2.27",
    "google-api-python-client>=2.143.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.3",
    "aiohttp>=3.13.2",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.5",
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
package = false
