[project]
name = "noon-agent"
version = "0.1.0"
description = "Prototype LangGraph agent for the Noon project."
authors = [{ name = "Noon", email = "dev@noon.local" }]
requires-python = ">=3.11"
dependencies = [
    "langgraph==0.2.39",
    "langchain-core==0.3.12",
    "langchain-openai==0.2.3",
    "ruff>=0.5.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "langchain>=0.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["noon_agent"]

[tool.pytest.ini_options]
pythonpath = ["noon_agent"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
