[project]
name = "noon-agent"
version = "0.1.0"
description = "Prototype LangGraph agent for the Noon project."
authors = [{ name = "Noon", email = "dev@noon.local" }]
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.6.5",
    "langgraph-sdk>=0.2.0",
    "langchain-core>=0.3.72",
    "langchain-openai>=0.3.27",
    "langchain>=0.3.27",
    "langsmith>=0.4.8",
    "ruff>=0.5.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.5",
    "email-validator>=2.0.0",
    "python-dotenv>=1.0",
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.149.0",
    "supabase>=2.0.0",
    "typing-extensions>=4.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["noon_agent"]

[tool.pytest.ini_options]
pythonpath = ["noon_agent"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
