[project]
name = "noon-backend"
version = "0.1.0"
description = "Supabase-backed API for Noon"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "supabase>=2.5.0,<3.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "pyjwt>=2.8.0,<3.0.0",
    "httpx>=0.27.2,<0.28.0"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.5,<1.0.0",
    "pytest>=8.2.0,<9.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.uv.sources]
noon-backend = { editable = true, path = "." }

