[project]
name = "noon-backend"
version = "0.1.0"
description = "Backend API for Noon - handles Supabase auth and LangGraph agent"
authors = [{ name = "Noon" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "supabase>=2.5.0,<3.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "pyjwt>=2.8.0,<3.0.0",
    "httpx>=0.27.2",
    "langgraph-sdk>=0.2.9",
    "langgraph>=0.2.53",
    "langchain-core>=0.2.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.5",
    "pytest>=8.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
package = false
